--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="rating">Rating:</string>
+    <string name="end">The end</string>
+    <string name="back">Go back</string>
+    <string name="forendfrag">This is the end.</string>
+    <string name="forend">Thank you for using my app. I wanted to develop app that help you track what movies you already watched and the ones that are still waiting for you. I hope you find it useful.</string>
 </resources>
